assets/x/01.namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: public
---
apiVersion: v1
kind: Namespace
metadata:
  name: private
