assets/x/public-api-bun.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: deploy-public-api
  namespace: public

spec:
  replicas: 1

  selector:
    matchLabels:
      app: public-api
  template:
    metadata:
      name: public-api
      labels:
        app: public-api
    spec:
      containers:
      - name: public-api
        image: cachac/kubelabs_public_api:bun1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: public-api
        #- containerPort: 3080
        #  name: healthcheck
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 50m
            memory: 100Mi

        volumeMounts:
           - name: vol-logs
             mountPath: /app/logs
      volumes:
         - name: vol-logs
           persistentVolumeClaim:
             claimName: pvc-public-api
