assets/x/03.ingress-webpage.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-webpage
  namespace: public
spec:
  rules:
  - host: USERLAB.kubelabs.<TLD>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-webpage
            port:
              number: 80
