assets/x/09.ingress-websocket.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-websocket
  namespace: public
spec:
  rules:
  - host: websocket.USERLAB.kubelabs.<TLD>
    http:
      paths:
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: svc-websocket
            port:
              number: 3001
